test_programs/compile_failure/noirc_frontend_tests_incorrect_generic_count_on_struct_impl/src/main.nr

    struct Foo {}
    impl <T> Foo<T> {}
    fn main() {
        let _ = Foo {}; // silence Foo never constructed warning
    }
    